--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>HI THERE, WELCOME TO TO MY WEBSITE! </h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>HI THERE, WELCOME TO MY WEBSITE! </h1>
+						<h3>Under Construction!</h3>
+						<!--<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
+						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>-->
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,15 +30,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Sathish Reddy Gurram</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Portfolio</a></li>
+							<!--<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -53,17 +54,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">June 15, 2024</span>
+									<h2><a href="#">Sathish Reddy Gurram</a></h2>
+									<p>Data Analyst with one year of experience in creating and delivering business intelligence reports for six business partners. Strategic in planning and proficient in generating impactful insights from data using tools like Python, R, Excel, Power BI, SQL, SAS, and Tableau, as evidenced through the projects mentioned below. Skilled in data manipulation, quality control, statistical analysis, publication-ready visualizations, and generating dynamic reports with actionable insights. Experienced in data analytics through market research and social media analytics, providing data-driven recommendations to enhance business strategies and drive success.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
+								<!--<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								</ul>-->
 							</article>
 
 						<!-- Posts -->
