--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">March 24, 2024</span>
+										<h2><a href="#">Online Interview <br />
+										schedule Management</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>·	Developed a comprehensive database schema with multiple entities such as Users, Roles, Interviews, and Interviewers, ensuring data integrity through primary keys, foreign keys, and constraints. Automated Interview Scheduling through stored procedures, eliminating time conflicts and streamlining the workflow created views to facilitate reporting and data retrieval, providing a clear overview of interview schedules.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -87,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">srgurram1.github.io</a></li>
 									</ul>
 								</article>
 								<article>
