--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2><a href="#">Customer Loan  <br />
 										Default Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src=""C:\Users\gsath\Downloads\image.jpg"" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p> Created a dynamic Excel dashboard to track and analyze loan default rate metrics for risk management; provided potentially actionable insights that could reduce default rates by 15% and high-risk loan approval rates by 25%.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Customer-Loan-Default-Dashboard" class="button">GITHUB</a></li>
@@ -80,14 +80,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">Mar 22, 2024</span>
+										<h2><a href="#">Forecasting Retail <br />
+										Sales</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Conducted a comprehensive analysis of anonymized retail sales data from Kaggle, predicting future sales trends across 12 stores, which improved inventory accuracy by 25% and reduced stockouts by 15%.Developed a comprehensive pipeline in R including ETL, feature engineering, and time-series forecasting using the ARIMA model to predict future sales based on the past 3 years of sales.Generated a BI report with sections on data reporting (collection/preparation/integration), descriptive & predictive analytics, and data-driven insights & recommendations. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button"></a></li>
+										<li><a href="https://github.com/srgurram1/Forecasting-Retail-Sales" class="GITHUB"></a></li>
 									</ul>
 								</article>
 								<article>
