--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Conducted a comprehensive analysis of anonymized retail sales data from Kaggle, predicting future sales trends across 12 stores, which improved inventory accuracy by 25% and reduced stockouts by 15%.Developed a comprehensive pipeline in R including ETL, feature engineering, and time-series forecasting using the ARIMA model to predict future sales based on the past 3 years of sales.Generated a BI report with sections on data reporting (collection/preparation/integration), descriptive & predictive analytics, and data-driven insights & recommendations. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/srgurram1/Forecasting-Retail-Sales" class="GITHUB"></a></li>
+										<li><a href="https://github.com/srgurram1/Forecasting-Retail-Sales" class="button">GITHUB </a></li>
 									</ul>
 								</article>
 								<article>
