--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2><a href="#">Customer Loan  <br />
 										Default Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/image.jpg" alt="" /></a>
 									<p> Created a dynamic Excel dashboard to track and analyze loan default rate metrics for risk management; provided potentially actionable insights that could reduce default rates by 15% and high-risk loan approval rates by 25%.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Customer-Loan-Default-Dashboard" class="button">GITHUB</a></li>
