--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Mar 22, 2024</span>
+										<span class="date">Mar 12, 2024</span>
 										<h2><a href="#">Forecasting Retail <br />
 										Sales</a></h2>
 									</header>
@@ -92,29 +92,29 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">March 27, 2024</span>
+										<h2><a href="#">Traffic Flow Analysis <br />
+											and Prediction</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Conducted a detailed traffic flow analysis using historical data and AI-driven forecasting techniques; Optimized traffic signal timings, leading to a 20% reduction in average commute times and a 12% drop in fuel consumption. Designed a robust pipeline to automate data QC and pre-processing to generate standardized data for the ML/DL models. Built Interactive dashboards using Plotly & Dash and presented data-driven recommendations & actionable insights</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srgurram1/Traffic_Flow_Pattern" class="button">GITHUB</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Online Interview <br />
+											Schedule Management</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Developed a comprehensive database schema with multiple entities such as Users, Roles, Interviews, and Interviewers, ensuring data integrity through primary keys, foreign keys, and constraints. Automated Interview Scheduling through stored procedures, eliminating time conflicts and streamlining the workflow. Created views to facilitate reporting and data retrieval, providing a clear overview of interview schedules.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srgurram1/Online_Interview_Schedule_Management" class="button">GITHUB</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
@@ -137,13 +137,13 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article>-->
 							</section>
 
 						<!-- Footer -->
-							<footer>
+							<!--<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -153,7 +153,7 @@
 									<a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
+							</footer> -->
 
 					</div>
 
