--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2><a href="#">Customer Loan  <br />
 										Default Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/image.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/1703858701927.jpeg" alt="" /></a>
 									<p> Created a dynamic Excel dashboard to track and analyze loan default rate metrics for risk management; provided potentially actionable insights that could reduce default rates by 15% and high-risk loan approval rates by 25%.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Customer-Loan-Default-Dashboard" class="button">GITHUB</a></li>
@@ -84,7 +84,7 @@
 										<h2><a href="#">Forecasting Retail <br />
 										Sales</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/forecasting retail sales.png" alt="" /></a>
 									<p>Conducted a comprehensive analysis of anonymized retail sales data from Kaggle, predicting future sales trends across 12 stores, which improved inventory accuracy by 25% and reduced stockouts by 15%.Developed a comprehensive pipeline in R including ETL, feature engineering, and time-series forecasting using the ARIMA model to predict future sales based on the past 3 years of sales.Generated a BI report with sections on data reporting (collection/preparation/integration), descriptive & predictive analytics, and data-driven insights & recommendations. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Forecasting-Retail-Sales" class="button">GITHUB </a></li>
@@ -96,7 +96,7 @@
 										<h2><a href="#">Traffic Flow Analysis <br />
 											and Prediction</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/traffic Flow analysis.png" alt="" /></a>
 									<p>Conducted a detailed traffic flow analysis using historical data and AI-driven forecasting techniques; Optimized traffic signal timings, leading to a 20% reduction in average commute times and a 12% drop in fuel consumption. Designed a robust pipeline to automate data QC and pre-processing to generate standardized data for the ML/DL models. Built Interactive dashboards using Plotly & Dash and presented data-driven recommendations & actionable insights</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Traffic_Flow_Pattern" class="button">GITHUB</a></li>
@@ -108,7 +108,7 @@
 										<h2><a href="#">Online Interview <br />
 											Schedule Management</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/online_interview.jpg" alt="" /></a>
 									<p>Developed a comprehensive database schema with multiple entities such as Users, Roles, Interviews, and Interviewers, ensuring data integrity through primary keys, foreign keys, and constraints. Automated Interview Scheduling through stored procedures, eliminating time conflicts and streamlining the workflow. Created views to facilitate reporting and data retrieval, providing a clear overview of interview schedules.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Online_Interview_Schedule_Management" class="button">GITHUB</a></li>
