--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<h2><a href="#">Online Interview <br />
 											Schedule Management</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/online_interview.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/online_interview.jpeg" alt="" /></a>
 									<p>Developed a comprehensive database schema with multiple entities such as Users, Roles, Interviews, and Interviewers, ensuring data integrity through primary keys, foreign keys, and constraints. Automated Interview Scheduling through stored procedures, eliminating time conflicts and streamlining the workflow. Created views to facilitate reporting and data retrieval, providing a clear overview of interview schedules.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/srgurram1/Online_Interview_Schedule_Management" class="button">GITHUB</a></li>
