--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<article>
 									<header>
 										<span class="date">FEB 24, 2024</span>
-										<h2><a href="#">Customer Loan  <br />
+										<h2><a href="https://github.com/srgurram1/Customer-Loan-Default-Dashboard/wiki/Customer-Loan-Default-Dashboard">Customer Loan  <br />
 										Default Dashboard</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/1703858701927.jpeg" alt="" /></a>
